Changes for 0.8.4

* show battle calculator on current territory when pressing ctrl B (sgb)

* ctrl+ and ctrl - zoom in and out (sgb)

* mark lhtr as complete. low luck rules for heavy bombers still need to be added for all versions (sgb)

* allow fighters to hover in sea zone where carriers can be produced under them for lhtr (sgb)

* move dice server config into properties file (sgb)

* allow controlling of name placements using name_place.txt (sgb)

* fix sea zone boundaries when map is scaled (sgb)

* add great_war mode (surtur2 and Triplelk)

* update triplea_linux.sh (Daniel Roethlisberger)

* show messages when people join/leave chat (sgb)

* fix scroll bug where map would jump when mouse scrolled in non wrappable maps (sgb)

* make convoy zones more transparent (sgb)

* fix neutral fighting bug (sgb)

* fix spelling mstakes in classic map (sgb, RogerCooper)

* add max button to place dialog where number of units that can be placed is limited (sgb)

* fix bug [ 1563239 ] Bad scroll increment for scrollbars (sgb)

* fix bug  [ 1563227 ] Continue button does not show up (sgb)

Changes for 0.8.3

* make odds calculator use MustFightBattle, update ui (sgb)

* allow scaling of auto placement finder.  On the command line, type the scale after the command, 
eg "java -classpath triplea.jar util/image/AutoPlacementFinder 0.5" (sgb)

* add map decoration images.  create a file called decorations.txt in the map directory.  The format is the same as place.txt, with an image name, then list of points where
the image should be drawn (multiple points are fine).  The image name should be the name of a file in the misc image folder (the same folder that has vc.png) (sgb)

* disable territory name drawing for territories listed in map.properties with a property like dont_draw_territory_names=Germany,Japan (sgb)

* allow for map scaling (sgb)

* let ai play in multiplayer games (sgb)

* fix [ 1533252 ] problem clearing out pbem (sgb)

* make the game look better on a mac (sgb)