@@ -1,5 +1,7 @@
 Changes for 0.8.4
 
+* fix bug where units originally in a sea zone with a submerged sub that is attacked by another unit cant leave the sea zone (sgb)
+
 * show battle calculator on current territory when pressing ctrl B (sgb)
 
 * ctrl+ and ctrl - zoom in and out (sgb)
